--- a/CCH.BCL/CCH.BCL.csproj
+++ b/CCH.BCL/CCH.BCL.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7533DC55-A360-426E-A77A-949E5E56D140}</ProjectGuid>
+    <ProjectGuid>{1A41EC29-BF29-45D0-AA38-141D5919B462}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ContactManager.SqlRepositories</RootNamespace>
-    <AssemblyName>ContactManager.SqlRepositories</AssemblyName>
+    <RootNamespace>CCH.BCL</RootNamespace>
+    <AssemblyName>CCH.BCL</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=1.50.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.50.2\lib\net451\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,18 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ContactRepository.cs" />
+    <Compile Include="Data\SQLClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CCH.BCL\CCH.BCL.csproj">
-      <Project>{1a41ec29-bf29-45d0-aa38-141d5919b462}</Project>
-      <Name>CCH.BCL</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ContactManager.DomainModel\ContactManager.DomainModel.csproj">
-      <Project>{2a78026c-dcee-4972-9b0b-17eb88ec1ae8}</Project>
-      <Name>ContactManager.DomainModel</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
