--- a/CCH.BCL/packages.config
+++ b/CCH.BCL/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.0" targetFramework="net461" />
+  <package id="Autofac.WebApi2" version="4.0.0" targetFramework="net461" />
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net461" />
 </packages>
