--- a/CCH.BCL/packages.config
+++ b/CCH.BCL/packages.config
@@ -5,5 +5,7 @@
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
 </packages>
