--- a/ContactManager.APITests/App.config
+++ b/ContactManager.APITests/App.config
@@ -3,7 +3,10 @@
   <appSettings>
     <add key="xunit.methodDisplay" value="method" />
   </appSettings>
-    <runtime>
+  <connectionStrings>
+    <add name="contactManager" connectionString="server = . ; database = ContactManager ; user id = sa ; pwd = Afpftcb1td" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
