--- a/ContactManager.SqlRepositoriesTests/packages.config
+++ b/ContactManager.SqlRepositoriesTests/packages.config
@@ -5,5 +5,6 @@
   <package id="xunit.assert" version="2.0.0" targetFramework="net461" />
   <package id="xunit.core" version="2.0.0" targetFramework="net461" />
   <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net461" />
+  <package id="xunit.runner.console" version="2.0.0" targetFramework="net461" />
   <package id="xunit.runner.visualstudio" version="2.0.0" targetFramework="net461" />
 </packages>
