--- a/ContactManager.APITests/packages.config
+++ b/ContactManager.APITests/packages.config
@@ -9,4 +9,9 @@
   <package id="Microsoft.Owin.Hosting" version="2.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="xunit" version="2.0.0" targetFramework="net461" />
+  <package id="xunit.abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="xunit.assert" version="2.0.0" targetFramework="net461" />
+  <package id="xunit.core" version="2.0.0" targetFramework="net461" />
+  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net461" />
 </packages>
